Archive2/77/3818c6be916b10/output
main.cpp:7:5: error: unknown type name 'string'; did you mean 'std::string'?
    string data;
    ^~~~~~
    std::string
/usr/include/c++/v1/iosfwd:189:65: note: 'std::string' declared here
typedef basic_string<char, char_traits<char>, allocator<char> > string;
                                                                ^
main.cpp:7:12: error: implicit instantiation of undefined template 'std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> >'
    string data;
           ^
/usr/include/c++/v1/iosfwd:188:28: note: template is declared here
    class _LIBCPP_TYPE_VIS basic_string;
                           ^
main.cpp:15:27: error: no template named 'pair'; did you mean 'std::pair'?
    bool operator()(const pair<const string, block*> &left, const pair<const string, block*> &right) {
                          ^~~~
                          std::pair
/usr/include/c++/v1/utility:216:25: note: 'std::pair' declared here
struct _LIBCPP_TYPE_VIS pair
                        ^
main.cpp:15:38: error: unknown type name 'string'; did you mean 'std::string'?
    bool operator()(const pair<const string, block*> &left, const pair<const string, block*> &right) {
                                     ^~~~~~
                                     std::string
/usr/include/c++/v1/iosfwd:189:65: note: 'std::string' declared here
typedef basic_string<char, char_traits<char>, allocator<char> > string;
                                                                ^
main.cpp:15:67: error: no template named 'pair'; did you mean 'std::pair'?
    bool operator()(const pair<const string, block*> &left, const pair<const string, block*> &right) {
                                                                  ^~~~
                                                                  std::pair
/usr/include/c++/v1/utility:216:25: note: 'std::pair' declared here
struct _LIBCPP_TYPE_VIS pair
                        ^
main.cpp:15:78: error: unknown type name 'string'; did you mean 'std::string'?
    bool operator()(const pair<const string, block*> &left, const pair<const string, block*> &right) {
                                                                             ^~~~~~
                                                                             std::string
/usr/include/c++/v1/iosfwd:189:65: note: 'std::string' declared here
typedef basic_string<char, char_traits<char>, allocator<char> > string;
                                                                ^
In file included from main.cpp:1:
In file included from /usr/include/c++/v1/algorithm:626:
/usr/include/c++/v1/utility:221:9: error: implicit instantiation of undefined template 'std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> >'
    _T1 first;
        ^
main.cpp:16:20: note: in instantiation of template class 'std::__1::pair<const std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> >, block *>' requested here
        return left.second -> size < right.second -> size;
                   ^
/usr/include/c++/v1/iosfwd:188:28: note: template is declared here
    class _LIBCPP_TYPE_VIS basic_string;
                           ^
main.cpp:15:95: warning: unused parameter 'right' [-Wunused-parameter]
    bool operator()(const pair<const string, block*> &left, const pair<const string, block*> &right) {
                                                                                              ^
main.cpp:24:5: error: no template named 'map'; did you mean 'std::map'?
    map<const string, block*> myMap;
    ^~~
    std::map
/usr/include/c++/v1/map:675:24: note: 'std::map' declared here
class _LIBCPP_TYPE_VIS map
                       ^
main.cpp:24:15: error: unknown type name 'string'; did you mean 'std::string'?
    map<const string, block*> myMap;
              ^~~~~~
              std::string
/usr/include/c++/v1/iosfwd:189:65: note: 'std::string' declared here
typedef basic_string<char, char_traits<char>, allocator<char> > string;
                                                                ^
main.cpp:26:5: error: no template named 'vector'; did you mean 'std::vector'?
    vector<pair<const string, block*> > myVector(myMap.begin(), myMap.end());
    ^~~~~~
    std::vector
/usr/include/c++/v1/vector:484:24: note: 'std::vector' declared here
class _LIBCPP_TYPE_VIS vector
                       ^
main.cpp:26:12: error: no template named 'pair'; did you mean 'std::pair'?
    vector<pair<const string, block*> > myVector(myMap.begin(), myMap.end());
           ^~~~
           std::pair
/usr/include/c++/v1/utility:216:25: note: 'std::pair' declared here
struct _LIBCPP_TYPE_VIS pair
                        ^
main.cpp:26:23: error: unknown type name 'string'; did you mean 'std::string'?
    vector<pair<const string, block*> > myVector(myMap.begin(), myMap.end());
                      ^~~~~~
                      std::string
/usr/include/c++/v1/iosfwd:189:65: note: 'std::string' declared here
typedef basic_string<char, char_traits<char>, allocator<char> > string;
                                                                ^
1 warning and 12 errors generated.
